# GraphPatchCalculator

./: .gitignore  CMakeLists.txt
include/graph/: Graph.hpp
include/pathfinding/: CachingDijkstra.hpp  Dijkstra.hpp  DijkstraQueue.hpp  FMIGraph.hpp  HubLabels.hpp  Path.hpp
include/selection/: ClosenessCentralityCenterCalculator.hpp  FullNodeSelectionCalculator.hpp  MiddleChoosingCenterCalculator.hpp  NodeSelection.hpp  NodeSelectionCalculator.hpp  PageRankCenterCalculator.hpp  SelectionCenterCalculator.hpp  SelectionLookup.hpp  SelectionOptimizer.hpp
include/utils/: ProgramOptions.hpp  Timer.hpp  Utils.hpp
plots/: requirements.txt  selection_plotter.py
src/: main.cpp
src/graph/: Graph.cpp
src/pathfinding/: CachingDijkstra.cpp  Dijkstra.cpp  Path.cpp
src/selection/: NodeSelection.cpp  SelectionLookup.cpp  SelectionOptimizer.cpp
src/utils/: ProgramOptions.cpp
